# FluffyVM

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.md  build.cmake  example.fluff  example.fluff_bin  factorial.lua  fluffyvm.c  generateFlamegraph.sh  generateTraceData.sh  heapUsagePrinter.lua  login.java  login2.java  opcodes.txt  package.pc.in  saved_java_refactor.vim  showProfilingReport.sh  start.lua  util.cmake
assembler/: assemble.sh  json.lua  main.lua  opcodes.txt  start.asm  start.lua
benchmark/: Test.java  fact.lua
include/FluffyVM/: dummy.h
scripts/: compiler_and_link_flags.cmake  process_dot_config.cmake
src/: attributes.h  bootloader.c  bootloader.h  bug.h  bytecode.c  bytecode.h  call_state.c  call_state.h  closure.c  closure.h  compiler_config.h  config.h  constants.h  coroutine.c  coroutine.h  fiber.c  fiber.h  fluffyvm.c  fluffyvm.h  fluffyvm_types.h  foxgc.h  hashing.c  hashing.h  hashtable.c  hashtable.h  interpreter.c  interpreter.h  jumptable.h  list.h  macros.h  main.c  main2.c  object.h  opcodes.c  opcodes.h  performance.h  premain.c  ref_counter.c  ref_counter.h  specials.c  (+19 more)
src/api_layer/: TODO_lua54.txt  api.h  config.h  lua54.c  lua54.h  types.h
src/bytecode/: bytecode.c  bytecode.h  protobuf_deserializer.c  protobuf_deserializer.h  prototype.c  prototype.h
src/collections/: list.c  list.h  list_iterator.c  list_node.c  queue.c  queue.h
src/fiber_impl/: posix_thread.c  posix_thread.h  ucontext.c  ucontext.h
src/format/: Makefile  bytecode.proto
src/loader/bytecode/: json.c  json.h
src/parser/: cjson.c  cjson.h  dictionary.c  dictionary.h  iniparser.c  iniparser.h  nxjson.c  nxjson.h  semver.c  semver.h
src/type_system/: type.h
src/util/: auto_cleanups.c  auto_cleanups.h  binary.h  block_release_pool.c  block_release_pool.h  stream.c  stream.h  util.c  util.h  util_types.h
src/util/functional/: foreach.c  foreach.h  functional.c  functional.h
suppressions/: UBSan.supp
